[package]
name = "favorites"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "favorites"

[features]
default = []
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl  = { version = "0.31.1" }

[dev-dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
